--- a/scss/main.scss
+++ b/scss/main.scss
@@ -124,7 +124,7 @@ a {
     }
     @media (max-width:767px) {
         padding:10px 10px;
-        font-size:15px;
+        font-size:13px;
     }
 }
 .btn-buy-xl, .btn-buy-xl2 {
@@ -1294,12 +1294,22 @@ a {
 }
 .contact-box2 {
     background-color:#fff;
-    padding:25px 25px 25px 25px ;
+    @media (min-width:1400px) {
+        padding:25px 25px 25px 25px;
+    }
+    @media (min-width:1200px) and (max-width:1399px) {
+        padding:25px 0px 25px 25px;
+    }
+    @media (max-width:1199px) {
+        padding:25px 20px 25px 20px;
+    }
     border-top-left-radius: 55px;
     border-bottom-left-radius: 55px;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
     -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
     box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    position:relative;
+    z-index:100;
 }
 .contact-box-flex {
     .contact-input-box {
@@ -2620,22 +2630,24 @@ a {
                         width: 30%;
                     }
                     @media (max-width:767px) {
-                        width: 80%;
+                        width: 95%;
                     }
                 }
                 .sticky-menu-icon {
                     &:first-child {
                         @media (min-width:1200px) {
-                            width: 20%;
+                            width: 64px;
+                            height: 64px;
+                            line-height: 64px;
                         }
-                        @media (min-width:768px) and (max-width:1199px) {
-                            width: 10%;
+                        @media (max-width:1199px) {
+                            width: 50px;
+                            height: 50px;
+                            line-height: 50px;
+                            svg {
+                                width: 18px;
+                            }
                         }
-                        @media (max-width:767px) {
-                            width: 20%;
-                        }
-                        height: 64px;
-                        line-height: 64px;
                         text-align: center;
                     }
                 }
@@ -2650,10 +2662,10 @@ a {
                 margin-bottom:10px;
                 .sticky-drop-ul {
                     @media (min-width:1200px) {
-                        margin-left: 104px;
+                        margin-left: 120px;
                     }
                     @media (max-width:1199px) {
-                        margin-left: 10%;
+                        margin-left: 100px;
                     }
                     margin-top:10px;
                     display: none;
@@ -2671,9 +2683,7 @@ a {
                             @media (min-width:768px) and (max-width:1199px) {
                                 width: 20%;
                             }
-                            @media (max-width:767px) {
-                                width: 20%;
-                            }
+
                             &.active {
                                 span {
                                     color:#007BFF;
@@ -2728,12 +2738,10 @@ a {
                             }
                         }
                         .sticky-menu-icon {
-                            transition: all .2s ease-in-out;
                             &:first-child {
                                 border-top-right-radius: 32px;
                                 border-bottom-right-radius: 32px;
                                 background:#007BFF;
-                                transition: all .2s ease-in-out;
                                 path {
                                     fill:#fff;
                                 }
@@ -3113,6 +3121,9 @@ a {
 }
 .user-invite-title {
     font-size:16px;
+    @media (max-width:768px) {
+        font-size:14px;
+    }
     font-weight: 500;
     margin-bottom:20px;
 }
@@ -3158,11 +3169,17 @@ a {
     }
     .psw-yes, .psw-no {
         font-size:16px;
+        @media (max-width:768px) {
+            font-size:14px;
+        }
         font-weight: 500;
         cursor: pointer;
     }
     .camera-yes, .camera-no {
         font-size:16px;
+        @media (max-width:768px) {
+            font-size:14px;
+        }
         font-weight: 500;
         cursor: pointer;
     }
@@ -3199,8 +3216,21 @@ a {
 .moderator-management, .camera-auto {
     padding-bottom:40px;
 }
+.moderator-management {
+    button:last-child {
+        @media (max-width:767px) {
+            padding:10px 28px!important;
+        }
+    }
+    button {
+        margin-bottom: 10px;
+    }
+}
 .password-guard-check {
     width: 100%;
+    @media (min-width:375px) {
+        display: flex;
+    }
     .label-x {
         padding-right: 7%;
     }
@@ -3810,7 +3840,12 @@ input.calendar {
         border-bottom:1px solid #A2B2C5;
         border-top:1px solid #A2B2C5;
         .personal-popup-content-wrapper {
-            height: 380px;
+            @media (min-width:768px) {
+                height: 380px;
+            }
+            @media (max-width:767px) {
+                height: 300px;
+            }
             overflow-y:scroll;
             padding-right: 20px;
             margin:10px 0;
@@ -3904,7 +3939,7 @@ input.calendar {
                 font-size:17px;
             }
             @media (max-width:1679px) {
-                font-size:14px;
+                font-size:13px;
             }
             font-weight: 500;
             font-style: italic;
@@ -3920,16 +3955,24 @@ input.calendar {
         line-height: 40px;
     }
     @media (max-width:1679px) {
-        width: 35px;
-        height: 35px;
-        line-height: 35px;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        img {
+            width: 50%;
+        }
     }
     background:#007BFF;
     border-radius: 50%;
     text-align: center;
     top:50%;
     transform:translateY(-50%);
-    right: 10px;
+    @media (min-width:1400px) {
+        right: 10px;
+    }
+    @media (max-width:1399px) {
+        right: 5px;
+    }
     cursor: pointer;
 }
 .ui-datepicker {
@@ -3962,7 +4005,7 @@ input.calendar {
                     padding:12px 27px;
                 }
                 @media (max-width:767px) {
-                    padding:8px 20px;
+                    padding:8px 18px;
                 }
             }
             @media (min-width:1400px) {
@@ -4009,9 +4052,12 @@ input.calendar {
             .my-head-right-item1 {
                 @media (min-width:1200px) {
                     width: 15%;
+                    margin-right: 15px;
                 }
                 @media (max-width:1199px) {
                     width: 100%;
+                    margin-left: 35px;
+                    margin-bottom: 20px;
                 }
                 font-weight: 500;
                 color:#007BFF;
@@ -4030,13 +4076,8 @@ input.calendar {
                     background-position: center center;
                     background-repeat: no-repeat;
                 }
-            }
-            .my-head-right-item2 {
-                @media (min-width:1200px) {
-                    width: 32%;
-                }
-                @media (max-width:1199px) {
-                    width: 100%;
+                &.active {
+                    display: block;
                 }
             }
             .my-head-right-item3 {
@@ -4075,13 +4116,13 @@ input.calendar {
             .calendar {
                 border-radius: 30px;
                 border-color:#007BFF;
-                padding-left: 24px;
+                padding-left: 18px;
                 &::placeholder {
                     @media (min-width:1680px) {
                         font-size:17px;
                     }
                     @media (max-width:1679px) {
-                        font-size:14px;
+                        font-size:13px;
                     }
                     font-weight: 500;
                     font-style: italic;
@@ -4395,6 +4436,9 @@ input.calendar {
 .by-date {
     position: relative;
     cursor: pointer;
+    @media (max-width:1199px) {
+        margin-left: 20px;
+    }
     .by-date-pop {
         display: none;
         position: absolute;
@@ -4449,6 +4493,7 @@ input.calendar {
     }
 }
 #gecmis {
+    margin-top:-55px;
     .meeting-box-content-title {
         @media (min-width:1200px) {
             margin-bottom: 58px;
@@ -4457,6 +4502,9 @@ input.calendar {
             margin-bottom:38px;
         }
     }
+}
+#anlik, #kisisel {
+    margin-top:30px;
 }
 .disable-link {
     pointer-events: none;
@@ -4471,12 +4519,7 @@ input.calendar {
 .content-box-scroll {
     height: 650px;
     width: 100%;
-    @media (min-width:1200px) {
-        padding-left: 15px;
-    }
-    @media (max-width:1199px) {
-        padding-left: 0px;
-    }
+    padding-top:85px;
     overflow-y: scroll;
     &::-webkit-scrollbar {
         display: none;
