--- a/css/main.css
+++ b/css/main.css
@@ -3605,7 +3605,7 @@ input.calendar:focus, input.calendar:checked, input.calendar:active, input.calen
   cursor: pointer; }
   @media (max-width: 1199px) {
     .delete, .meeting-linkx, .calendar-link {
-      padding: 0 0 0 15px !important; } }
+      padding: 0 0 0 15px; } }
 
 @media (min-width: 768px) {
   .calendar-link {
@@ -4314,5 +4314,224 @@ input.calendar:focus, input.calendar:checked, input.calendar:active, input.calen
 @media (max-width: 1199px) {
   .acc-up-btn {
     margin-bottom: 30px; } }
+
+/* Packets Path Start */
+.packet-path-all .packet-path {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 75%; }
+  .packet-path-all .packet-path::after {
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 4px;
+    background-color: #EFF2F4;
+    z-index: 1;
+    top: 50%;
+    transform: translateY(-50%); }
+  .packet-path-all .packet-path .path-item {
+    position: relative;
+    z-index: 2;
+    width: 25%;
+    text-align: center; }
+    @media (min-width: 507px) {
+      .packet-path-all .packet-path .path-item {
+        top: 12px; } }
+    @media (max-width: 506px) {
+      .packet-path-all .packet-path .path-item {
+        top: 18px; } }
+    .packet-path-all .packet-path .path-item:first-child {
+      text-align: start !important; }
+    .packet-path-all .packet-path .path-item:last-child {
+      text-align: end !important; }
+    .packet-path-all .packet-path .path-item:nth-child(2) span.path-span {
+      background-color: #775efb; }
+    .packet-path-all .packet-path .path-item:nth-child(3) span.path-span {
+      background-color: #656df8; }
+    .packet-path-all .packet-path .path-item:nth-child(4) span.path-span {
+      background-color: #4a83f5; }
+    .packet-path-all .packet-path .path-item span.path-span {
+      width: 32px;
+      height: 32px;
+      border: 4px solid #EFF2F4;
+      border-radius: 50%;
+      display: inline-block; }
+      .packet-path-all .packet-path .path-item span.path-span.active {
+        background: #fff; }
+    .packet-path-all .packet-path .path-item .path-name {
+      color: #EFF2F4;
+      font-weight: 600; }
+      @media (min-width: 1680px) {
+        .packet-path-all .packet-path .path-item .path-name {
+          font-size: 20px; } }
+      @media (min-width: 1200px) and (max-width: 1679px) {
+        .packet-path-all .packet-path .path-item .path-name {
+          font-size: 18px; } }
+      @media (min-width: 507px) and (max-width: 1199px) {
+        .packet-path-all .packet-path .path-item .path-name {
+          font-size: 16px; } }
+      @media (max-width: 506px) {
+        .packet-path-all .packet-path .path-item .path-name {
+          font-size: 14px; } }
+.packet-path-all .chosen-packets {
+  position: relative;
+  width: 25%;
+  text-align: center; }
+  .packet-path-all .chosen-packets .chosen-sell-icon {
+    position: relative; }
+    .packet-path-all .chosen-packets .chosen-sell-icon .chosen-img, .packet-path-all .chosen-packets .chosen-sell-icon .chosen-text {
+      cursor: pointer; }
+  .packet-path-all .chosen-packets .chosen-img {
+    width: 31px;
+    margin: 0 auto;
+    padding-bottom: 7px; }
+    .packet-path-all .chosen-packets .chosen-img div {
+      position: relative; }
+    .packet-path-all .chosen-packets .chosen-img span {
+      position: absolute;
+      top: -7px;
+      right: -10px;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      border-radius: 50%;
+      text-align: center;
+      background: #904BFF;
+      color: #fff;
+      font-size: 14px;
+      font-weight: 600; }
+  .packet-path-all .chosen-packets .chosen-text {
+    font-weight: 600;
+    color: #fff; }
+    @media (min-width: 1680px) {
+      .packet-path-all .chosen-packets .chosen-text {
+        font-size: 20px; } }
+    @media (min-width: 1200px) and (max-width: 1679px) {
+      .packet-path-all .chosen-packets .chosen-text {
+        font-size: 18px; } }
+    @media (min-width: 507px) and (max-width: 1199px) {
+      .packet-path-all .chosen-packets .chosen-text {
+        font-size: 16px; } }
+    @media (max-width: 506px) {
+      .packet-path-all .chosen-packets .chosen-text {
+        font-size: 14px; } }
+
+.path-number {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  color: #fff;
+  font-weight: 600;
+  font-size: 20px;
+  background-color: #A2B2C5;
+  border-radius: 50%;
+  margin-right: 10px; }
+
+.path-price {
+  font-size: 24px;
+  font-weight: 600;
+  color: #343A40; }
+  .path-price:first-child {
+    border-right: 1px solid #A2B2C5;
+    padding-right: 25px; }
+  .path-price:last-child {
+    padding-left: 25px; }
+
+.path-price-span {
+  font-weight: 400;
+  color: #343A40;
+  padding-left: 2px; }
+
+.eh-text.path-t {
+  color: #904BFF; }
+
+.path-tick {
+  display: none;
+  transform: rotate(45deg);
+  height: 24px;
+  width: 12px;
+  border-bottom: 4px solid #904BFF;
+  border-right: 4px solid #904BFF; }
+  .path-tick.active {
+    display: inline-block; }
+
+.extra-buy-packet {
+  position: relative; }
+  .extra-buy-packet .path-tick {
+    position: absolute;
+    top: 38px;
+    right: 15%; }
+
+.kk-head {
+  padding-bottom: 55px;
+  border-bottom: 1px solid #A2B2C5; }
+
+.kk-main {
+  padding: 55px 0 40px 0;
+  border-bottom: 1px solid #A2B2C5; }
+
+.calendar-popup-content.path-popup {
+  max-width: 447px !important; }
+
+.path-popup-title {
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #A2B2C5; }
+
+.pp-tt {
+  font-size: 17px;
+  font-weight: 600; }
+
+.path-popup-item:first-child {
+  font-weight: 400;
+  text-align: start; }
+.path-popup-item:last-child {
+  text-align: end; }
+
+.path-popup-flex {
+  padding: 18px 0;
+  border-bottom: 2px dotted #A2B2C5; }
+  .path-popup-flex.x {
+    border-bottom: 1px solid #A2B2C5 !important; }
+
+.px-t {
+  font-size: 22px; }
+
+.path-popx {
+  position: absolute;
+  display: none;
+  top: 85px;
+  right: 0;
+  z-index: 1000;
+  padding: 40px 30px;
+  border-radius: 36px;
+  background: #fff;
+  -webkit-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.11);
+  -moz-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.11);
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.11); }
+  @media (min-width: 768px) {
+    .path-popx {
+      width: 370px; } }
+  @media (max-width: 767px) {
+    .path-popx {
+      width: 300px; } }
+  .path-popx.active {
+    display: block; }
+  .path-popx .p-sp {
+    position: relative; }
+    .path-popx .p-sp span {
+      position: absolute;
+      top: -50px;
+      background: #fff;
+      width: 25px;
+      height: 25px;
+      right: 44%;
+      transform: rotate(45deg); }
+
+/* Packets Path End */
 
 /*# sourceMappingURL=main.css.map */
