--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4319,7 +4319,7 @@ input.calendar {
     font-style: inherit;
     cursor: pointer;
     @media (max-width:1199px) {
-        padding:0 0 0 15px!important;
+        padding:0 0 0 15px;
     }
 }
 .calendar-link {
@@ -5182,3 +5182,258 @@ input.calendar {
         margin-bottom:30px;
     }
 }
+
+/* Packets Path Start */
+.packet-path-all {
+    .packet-path {
+        position:relative;
+        display: flex;
+        align-items: center;
+        width: 75%;
+        &::after {
+            position:absolute;
+            content:" ";
+            width:100%;
+            height:4px;
+            background-color:#EFF2F4;
+            z-index: 1;
+            top:50%;
+            transform:translateY(-50%);
+        }
+        .path-item {
+            position:relative;
+            z-index:2;
+            width: 25%;
+            text-align: center;
+            @media (min-width:507px) {
+                top:12px;
+            }
+            @media (max-width:506px) {
+                top:18px;
+            }
+            &:first-child {
+                text-align: start!important;
+            }
+            &:last-child {
+                text-align: end!important;
+            }
+            &:nth-child(2) {
+                span.path-span {
+                    background-color:#775efb;
+                }
+            }
+            &:nth-child(3) {
+                span.path-span {
+                    background-color:#656df8;
+                }
+            }
+            &:nth-child(4) {
+                span.path-span {
+                    background-color:#4a83f5; 
+                }
+            }
+            span.path-span {
+                width: 32px;
+                height: 32px;
+                border:4px solid #EFF2F4;
+                border-radius: 50%;
+                display: inline-block;
+                &.active {
+                    background:#fff;
+                }
+            }
+            .path-name {
+                color:#EFF2F4;
+                font-weight: 600;
+                @media (min-width:1680px) {
+                    font-size:20px;
+                }
+                @media (min-width:1200px) and (max-width:1679px) {
+                    font-size:18px;
+                }
+                @media (min-width:507px) and (max-width:1199px) {
+                    font-size:16px;
+                }
+                @media (max-width:506px) {
+                    font-size:14px;
+                }
+            }
+        }
+    }
+    .chosen-packets {
+        position: relative;
+        width: 25%;
+        text-align: center;
+        .chosen-sell-icon {
+            position: relative;
+            .chosen-img, .chosen-text {
+                cursor: pointer;
+            }
+        }
+        .chosen-img {
+            width: 31px;
+            margin:0 auto;
+            padding-bottom: 7px;
+            div {
+                position:relative;
+            }
+            span {
+                position:absolute;
+                top:-7px;
+                right:-10px;
+                width: 20px;
+                height: 20px;
+                line-height: 20px;
+                border-radius: 50%;
+                text-align: center;
+                background:#904BFF;
+                color:#fff;
+                font-size:14px;
+                font-weight: 600;
+            }
+        }
+        .chosen-text {
+            @media (min-width:1680px) {
+                font-size:20px;
+            }
+            @media (min-width:1200px) and (max-width:1679px) {
+                font-size:18px;
+            }
+            @media (min-width:507px) and (max-width:1199px) {
+                font-size:16px;
+            }
+            @media (max-width:506px) {
+                font-size:14px;
+            }
+            font-weight: 600;
+            color:#fff;
+        }
+    }
+}
+.path-number {
+    display: inline-block;
+    width: 32px;
+    height:32px;
+    line-height: 32px;
+    text-align: center;
+    color:#fff;
+    font-weight: 600;
+    font-size:20px;
+    background-color:#A2B2C5;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.path-price {
+    font-size:24px;
+    font-weight: 600;
+    color:#343A40;
+    &:first-child {
+        border-right: 1px solid #A2B2C5;
+        padding-right: 25px;
+    }
+    &:last-child {
+        padding-left: 25px;
+    }
+}
+.path-price-span {
+    font-weight: 400;
+    color:#343A40;
+    padding-left: 2px;
+}
+.eh-text.path-t {
+    color:#904BFF;
+}
+.path-tick {
+    display: none;
+    transform: rotate(45deg);
+    height: 24px;
+    width: 12px;
+    border-bottom: 4px solid #904BFF;
+    border-right: 4px solid #904BFF;
+    &.active {
+        display: inline-block;
+    }
+}
+.extra-buy-packet {
+    position:relative;
+    .path-tick {
+        position:absolute;
+        top:38px;
+        right:15%;
+    }
+}
+.kk-head {
+    padding-bottom:55px;
+    border-bottom:1px solid #A2B2C5;
+}
+.kk-main {
+    padding:55px 0 40px 0;
+    border-bottom:1px solid #A2B2C5;
+}
+.calendar-popup-content.path-popup {
+    max-width: 447px!important;
+}
+.path-popup-title {
+    font-size:20px;
+    font-weight: 600;
+    padding-bottom:15px;
+    border-bottom: 1px solid #A2B2C5;
+}
+.pp-tt  {
+    font-size:17px;
+    font-weight: 600;
+}
+.path-popup-item {
+    &:first-child {
+        font-weight: 400;
+        text-align: start;
+    }
+    &:last-child {
+        text-align: end;
+    }
+}
+.path-popup-flex {
+    padding:18px 0;
+    border-bottom:2px dotted #A2B2C5;
+    &.x {
+        border-bottom:1px solid #A2B2C5!important;
+    }
+}
+.px-t {
+    font-size:22px;
+}
+.path-popx {
+    position:absolute;
+    display: none;
+    top:85px;
+    right: 0;
+    z-index: 1000;
+    @media (min-width:768px) {
+        width: 370px;
+    }
+    @media (max-width:767px) {
+        width: 300px;
+    }
+    padding:40px 30px;
+    border-radius: 36px;
+    background:#fff;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    &.active {
+        display: block;
+    }
+    .p-sp {
+        position:relative;
+        span {
+            position:absolute;
+            top:-50px;
+            background:#fff;
+            width: 25px;
+            height: 25px;
+            right: 44%;
+            transform: rotate(45deg);
+        }
+    }
+}
+/* Packets Path End */
