--- a/scss/main.scss
+++ b/scss/main.scss
@@ -106,6 +106,7 @@ a {
 
 .btn-buy2 {
     padding:18px 40px;
+    cursor: pointer;
     color:#007BFF;
     border:1px solid #007BFF;
     background:#fff;
@@ -2498,6 +2499,18 @@ a {
     color:#343A40!important;
     margin-bottom:16px!important;
 }
+.meeting-span-text {
+    @media (min-width:1200px) {
+        font-size:20px;
+    }
+    @media (max-width:1199px) {
+        font-size:14px;
+    }
+    font-weight: 400;
+    color:#90A0B3;
+    margin-bottom:40px;
+    display: inline-block;
+}
 .meeting_wrapper {
     .contact-title {
         .meeting-p-text {
@@ -2509,18 +2522,7 @@ a {
             }
             margin-bottom: 17px!important;
         }
-        .meeting-span-text {
-            @media (min-width:1200px) {
-                font-size:20px;
-            }
-            @media (max-width:1199px) {
-                font-size:14px;
-            }
-            font-weight: 400;
-            color:#90A0B3;
-            margin-bottom:40px;
-            display: inline-block;
-        }
+        
     }
     .meeting-form {
         @media (min-width:1200px) {
@@ -5019,6 +5021,11 @@ input.calendar {
     }
     font-weight: 600;
 }
+.owned-span.create {
+    @media (min-width:1200px) {
+        font-size:24px;
+    }
+}
 .package-owned {
     text-align: start!important;
     .delete {
@@ -5115,9 +5122,6 @@ input.calendar {
 }
 /* My Account End */
 
-.free-trial {
-    display: none;
-}
 
 .extra-buy {
     max-width:1200px;
@@ -5437,3 +5441,105 @@ input.calendar {
     }
 }
 /* Packets Path End */
+
+/* Create Account Start */
+.calendar-popup-content.path-popup {
+    max-width:447px;
+}
+.path-pp2 {
+    &.active {
+        display: block;
+    }
+}
+.path-span.success {
+    background:#00DD08!important;
+    transform: rotate(45deg);
+    position:relative;
+    &::after {
+        height: 2px;
+        bottom: 25%;
+        left: 30%;
+        right: 45%;
+        top: auto;
+        background: white;
+        position: absolute;
+        content: " ";
+    }
+    &::before {
+        width: 2px;
+        height: auto;
+        bottom: 25%;
+        top: 20%;
+        left: 55%;
+        right: auto;
+        background: white;
+        position: absolute;
+        content: " ";
+    }
+  }
+/* Create Account End */
+
+/* Success Payment Start */
+.success-payment-head {
+    text-align: center;
+    .success-payment-title {
+        @media (min-width:1200px) {
+            font-size:36px;
+        }
+        @media (max-width:1199px) {
+            font-size:23px;
+        }
+        font-weight:600;
+    }
+}
+.path-popup-title.sc-py {
+    color:#904BFF;
+}
+.success-payment {
+    padding:45px;
+    border-radius: 36px;
+    border:2px solid #00DD08;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    &.error-payment {
+        border-color:#DD0000;
+    }
+}
+/* Success Payment End */
+
+/* Verification Mail Start */
+.meeting-h1 {
+    &.verify {
+        font-weight: 600!important;
+    } 
+    span {
+        font-weight: 400;
+    }
+}
+.verify-mail {
+    @media (min-width:1200px) {
+    font-size:28px;
+    }
+    @media (max-width:1199px) {
+        font-size:20px;
+    }
+    font-weight: 600;
+}
+
+/* Verification Mail End */
+
+/* Unplanned Meeting Start*/
+.meeting-adress {
+    font-size:20px;
+    font-weight: 500;
+    color:#93A0B1;
+    a {
+        color:#343A40;
+    }
+}
+
+/* Unplanned Meeting End*/
+.free-trial {
+    display: none;
+}
