--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,6 +80,7 @@ a {
 // Button Login and Buy
 .btn-login, .btn-buy{ 
     display: inline-block;
+    cursor: pointer;
     background-color:#fff;
     border-radius: 20px;
     font-size:17px;
@@ -89,10 +90,10 @@ a {
     }
 }
 .btn-bg-blue {
-    background:#007BFF;
-    color:#fff;
+    background:#007BFF!important;
+    color:#fff!important;
     &:hover {
-        background:#0069E1;
+        background:#0069E1!important;
     }
 }
 .btn-login {
@@ -129,6 +130,7 @@ a {
     }
 }
 .btn-buy-xl, .btn-buy-xl2 {
+    cursor: pointer;
     @media (min-width:1920px) {
         padding:20px 80px;
         font-size:20px;
@@ -174,6 +176,7 @@ a {
     font-size:17px;
     font-weight: 500;
     display: inline-block;
+    cursor: pointer;
     @media (min-width:968px) {
         font-size: 17px;
         padding:8px 40px;
@@ -197,6 +200,7 @@ a {
     font-size:17px;
     font-weight: 500;
     display: inline-block;
+    cursor: pointer;
     @media (min-width:968px) {
         font-size: 17px;
         padding:8px 30px;
@@ -220,6 +224,7 @@ a {
     text-align: center;
     font-size:17px;
     font-weight: 500;
+    cursor: pointer;
     border-radius: 30px;
 }
 .btn-acc {
@@ -233,6 +238,7 @@ a {
 // Button Try for Free
 .btn-try-free {
     display: inline-block;
+    cursor: pointer;
     @media (min-width:1920px) {
         padding:20px 80px;
         font-size:20px;
@@ -266,6 +272,7 @@ a {
 
 // Button Send
 .btn-send, .btn-cancel {
+    cursor: pointer;
     display: inline-block;
     @media (min-width:1680px) {
         padding:20px 80px;
@@ -289,6 +296,7 @@ a {
 }
 .btn-send {
     background-color:#007BFF;
+    cursor: pointer;
     color:#fff;
     &:hover {
         background-color:#0069E1;
@@ -299,6 +307,7 @@ a {
 // Button Cancel
 .btn-cancel {
     background-color:transparent;
+    cursor: pointer;
     color:#007BFF;
     border:1px solid #007BFF;
     &:hover {
@@ -309,6 +318,7 @@ a {
 // Button Monts and Years 
 .btn-monts, .btn-years {
     display: inline-block;
+    cursor: pointer;
     position: relative;
     @media (min-width:1200px) {
         font-size: 17px;
@@ -341,6 +351,7 @@ a {
 
 // Button Forgot Password 
 .btn-forgot, .btn-forgot2 {
+    cursor: pointer;
     display: inline-block;
     @media (min-width:1200px) {
         padding:20px 60px;
@@ -378,6 +389,7 @@ a {
 
 // Btn Forgot Send 
 .btn-forgot-send {
+    cursor: pointer;
     @media (min-width:1200px) {
         padding:18px 210px;
     }
@@ -396,6 +408,7 @@ a {
     background-color:transparent;
     color:#007BFF;
     border:1px solid #007BFF;
+    cursor: pointer;
     &:hover {
         background-color:#EFF2F4;
     }
@@ -404,6 +417,7 @@ a {
 // Button Table 
 .btn-table-one, .btn-table-two {
     display: inline-block;
+    cursor: pointer;
     @media (min-width:1200px) {
         font-size: 17px;
         padding:8px 80px;
@@ -1285,16 +1299,17 @@ a {
 .contact_wrapper {
     margin:75px 0;
 }
-.contact-box {
+.contact-box, .contact-box2, .contact-box3 {
     background-color:#fff;
-    padding:44px 38px;
-    border-radius: 36px;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
     -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
     box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
 }
+.contact-box {
+    padding:44px 38px;
+    border-radius: 36px;
+}
 .contact-box2 {
-    background-color:#fff;
     @media (min-width:1400px) {
         padding:25px 25px 25px 25px;
     }
@@ -1306,9 +1321,19 @@ a {
     }
     border-top-left-radius: 55px;
     border-bottom-left-radius: 55px;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
-    -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
-    box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.11);
+    position:relative;
+    z-index:100;
+    margin-left: 15px;
+}
+.contact-box3 {
+    @media (min-width:768px) {
+        padding:60px 0 45px 60px;
+    }
+    @media (max-width:767px) {
+        padding:40px 0 30px 40px;
+    }
+    border-top-left-radius: 36px;
+    border-bottom-left-radius: 36px;
     position:relative;
     z-index:100;
 }
@@ -3049,7 +3074,7 @@ a {
 /* Meeting Plans Start */
 .meeting-plans-wrapper {
     .contact-box {
-        margin-bottom:89px;
+        margin-bottom:30px;
     }
     .user-panel-title {
         h1 {
@@ -3240,6 +3265,11 @@ a {
 .again-meeting {
     display: flex;
     align-items: center;
+    input[type="checkbox"] {
+        width: 18.5px;
+        height: 18.5px;
+        margin-right: 11px;
+    }
     input[type="checkbox"]:disabled {
         width: 18.5px;
         height: 18.5px;
@@ -3580,7 +3610,7 @@ input.calendar {
   background: #ffffff;
   border-radius: 32px;
   padding: 30px;
-  z-index: 10!important;
+  z-index: 101!important;
   -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.10);
   -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.10);
   box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.10);
@@ -3983,153 +4013,151 @@ input.calendar {
 /* Meeting Plans End */
 
 /* My Meeting Start */
-.contact-box2 {
-    .my-meeting-toptitle {
-        @media (min-width:1200px) {
+.my-meeting-toptitle {
+    @media (min-width:1200px) {
+        display: flex;
+    }
+    @media (max-width:1199px) {
+        display: block;
+    }
+    .my-meeting-head-left {
+        @media (min-width:1680px) {
+            width: 40%;
+        }
+        @media (min-width:1200px) and (max-width:1679px) {
+            width: 44%;
+        }
+        @media (max-width:1199px) {
+            text-align: center;
+            margin-bottom:20px;
+        }
+        .btn-buy2 {
+            @media (min-width:768px) and (max-width:1679px) {
+                padding:12px 27px;
+            }
+            @media (max-width:767px) {
+                padding:8px 18px;
+            }
+        }
+        @media (min-width:1400px) {
+            .btn-buy2 {
+                margin-right: 14px;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+        @media (max-width:1199px) {
+            .btn-buy2 {
+                margin-right: 2%;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+    .my-meeting-head-right {
+        align-items: center;
+        justify-content:space-around;
+        @media (min-width:1680px) {
+            width: 60%;
+            display: flex;
+        }
+        @media (min-width:1200px) and (max-width:1679px) {
+            width: 56%;
             display: flex;
         }
         @media (max-width:1199px) {
-            display: block;
-        }
-        .my-meeting-head-left {
-            @media (min-width:1680px) {
-                width: 40%;
-            }
-            @media (min-width:1200px) and (max-width:1679px) {
-                width: 44%;
-            }
-            @media (max-width:1199px) {
-                text-align: center;
+            margin-bottom:20px;
+            .date-plans {
                 margin-bottom:20px;
             }
-            .btn-buy2 {
-                @media (min-width:768px) and (max-width:1679px) {
-                    padding:12px 27px;
-                }
-                @media (max-width:767px) {
-                    padding:8px 18px;
-                }
-            }
-            @media (min-width:1400px) {
-                .btn-buy2 {
-                    margin-right: 14px;
-                    &:last-child {
-                        margin-right: 0;
-                    }
-                }
-            }
-            @media (max-width:1199px) {
-                .btn-buy2 {
-                    margin-right: 2%;
-                    &:last-child {
-                        margin-right: 0;
-                    }
-                }
+        }
+        input {
+            @media (max-width:1679px) {
+                padding-top:12px!important;
+                padding-bottom:12px!important;
+                font-size:18px;
             }
         }
-        .my-meeting-head-right {
-            align-items: center;
-            justify-content:space-around;
-            @media (min-width:1680px) {
-                width: 60%;
-                display: flex;
-            }
-            @media (min-width:1200px) and (max-width:1679px) {
-                width: 56%;
-                display: flex;
+        .my-head-right-item1 {
+            @media (min-width:1200px) {
+                width: 15%;
+                margin-right: 15px;
             }
             @media (max-width:1199px) {
-                margin-bottom:20px;
-                .date-plans {
-                    margin-bottom:20px;
-                }
+                width: 100%;
+                margin-left: 35px;
+                margin-bottom: 20px;
             }
-            input {
+            font-weight: 500;
+            color:#007BFF;
+            position: relative;
+            cursor: pointer;
+            display: none;
+            &::after {
+                position:absolute;
+                content: " ";
+                width: 20px;
+                height: 20px;
+                left: -30px;
+                top:50%;
+                transform: translateY(-50%);
+                background:url(../img/calendar-week.svg);
+                background-position: center center;
+                background-repeat: no-repeat;
+            }
+            &.active {
+                display: block;
+            }
+        }
+        .my-head-right-item3 {
+            @media (min-width:1200px) {
+                width: 53%;
+            }
+            @media (max-width:1199px) {
+                width: 100%;
+            }
+        }
+    }
+    .personal-popup-search-item {
+        @media (min-width:1680px) {
+            width: 80%;
+        }
+        @media (min-width:1400px) and (max-width:1679px) {
+            width: 80%;
+        }
+        @media (min-width:1200px) and (max-width:1399px) {
+            width: 75%;
+        }
+        @media (max-width:1199px) {
+            width: 100%;
+        }
+        input {
+            padding:17px 24px;
+        }
+    }
+    .spe-proid {
+        @media (min-width:1200px) {
+            width: auto;
+        }
+        @media (max-width:1199px) {
+            width: 100%;
+        }
+        .calendar {
+            border-radius: 30px;
+            border-color:#007BFF;
+            padding-left: 18px;
+            &::placeholder {
+                @media (min-width:1680px) {
+                    font-size:17px;
+                }
                 @media (max-width:1679px) {
-                    padding-top:12px!important;
-                    padding-bottom:12px!important;
-                    font-size:18px;
-                }
-            }
-            .my-head-right-item1 {
-                @media (min-width:1200px) {
-                    width: 15%;
-                    margin-right: 15px;
-                }
-                @media (max-width:1199px) {
-                    width: 100%;
-                    margin-left: 35px;
-                    margin-bottom: 20px;
+                    font-size:13px;
                 }
                 font-weight: 500;
-                color:#007BFF;
-                position: relative;
-                cursor: pointer;
-                display: none;
-                &::after {
-                    position:absolute;
-                    content: " ";
-                    width: 20px;
-                    height: 20px;
-                    left: -30px;
-                    top:50%;
-                    transform: translateY(-50%);
-                    background:url(../img/calendar-week.svg);
-                    background-position: center center;
-                    background-repeat: no-repeat;
-                }
-                &.active {
-                    display: block;
-                }
-            }
-            .my-head-right-item3 {
-                @media (min-width:1200px) {
-                    width: 53%;
-                }
-                @media (max-width:1199px) {
-                    width: 100%;
-                }
-            }
-        }
-        .personal-popup-search-item {
-            @media (min-width:1680px) {
-                width: 80%;
-            }
-            @media (min-width:1400px) and (max-width:1679px) {
-                width: 80%;
-            }
-            @media (min-width:1200px) and (max-width:1399px) {
-                width: 75%;
-            }
-            @media (max-width:1199px) {
-                width: 100%;
-            }
-            input {
-                padding:17px 24px;
-            }
-        }
-        .spe-proid {
-            @media (min-width:1200px) {
-                width: auto;
-            }
-            @media (max-width:1199px) {
-                width: 100%;
-            }
-            .calendar {
-                border-radius: 30px;
-                border-color:#007BFF;
-                padding-left: 18px;
-                &::placeholder {
-                    @media (min-width:1680px) {
-                        font-size:17px;
-                    }
-                    @media (max-width:1679px) {
-                        font-size:13px;
-                    }
-                    font-weight: 500;
-                    font-style: italic;
-                    color:#90A0B3;
-                }
+                font-style: italic;
+                color:#90A0B3;
             }
         }
     }
@@ -4508,6 +4536,9 @@ input.calendar {
 #anlik, #kisisel {
     margin-top:30px;
 }
+#anlik {
+    padding-left: 15px;
+}
 .disable-link {
     pointer-events: none;
     cursor: default;
@@ -4523,6 +4554,7 @@ input.calendar {
     width: 100%;
     padding-top:85px;
     overflow-y: scroll;
+    padding-left:15px;
     &::-webkit-scrollbar {
         display: none;
     }
@@ -4722,6 +4754,11 @@ input.calendar {
             height: 440px;
             overflow-y: scroll;
             margin-top:20px;
+            tr {
+                &:hover {
+                    background-color: #eff2f4!important;
+                }
+            }
             &::-webkit-scrollbar {
                 width: 6px;
                 border-radius: 10px;
@@ -5540,6 +5577,119 @@ input.calendar {
 }
 
 /* Unplanned Meeting End*/
+
+/* Meeting Plan Join Start */
+.mpj-top {
+    @media (min-width:768px) {
+        width: 75%;
+    }
+    @media (max-width:767px) {
+        width: 100%;
+        padding-right: 15px;
+    }
+    cursor: pointer;
+}
+.contact-box.mpj {
+    margin-top:30px;
+}
+.mpj-toggle {
+    display: none;
+    background-color:#F8F9FA;
+    margin-top:-32px;
+    @media (min-width:768px) {
+        padding:75px 0 45px 60px;
+    }
+    @media (max-width:767px) {
+        padding:60px 0 30px 40px;
+    }
+    border-bottom-left-radius: 36px;
+}
+.mpj-item-img {
+    transition: all .2s;
+    &.active {
+        transform:rotate(90deg)
+    }
+}
+/* Meeting Plan Join End */
+
+/* Meeting Plans 2 Start */
+.agm-btn {
+    margin-bottom:15px;
+    margin-right: 15px;
+}
+.ag-content {
+    display: none;
+}
+/* Meeting Plans 2 End */
+
+/* My Meeting 2 Start */
+.meeting-box-content-title {
+    .time-period-plans {
+        @media (min-width:768px) {
+            width: 35%;
+        }
+        @media (max-width:767px) {
+            width: 100%;
+        }
+        .spe-select {
+            margin:0;
+        }
+    }
+    h1.mtb2 {
+        @media (min-width:768px) {
+            width: 65%;
+        }
+        @media (max-width:767px) {
+            width: 100%;
+        }
+    }
+    h1 {
+        display: inline-block;
+    }
+}
+.my-meeting2 {
+    margin-top:-55px!important;
+    .content-box-scroll {
+        height: 900px;
+    }
+}
+/* My Meeting 2 End */
+
+/* Meeting Records 2 Start */
+.total-meeting-text {
+    @media (min-width:1680px) {
+        font-size:24px;
+    }
+    @media (min-width:1400px) and (max-width:1679px) {
+        font-size:22px;
+    }
+    @media (min-width:1200px) and (max-width:1399px) {
+        font-size:18px;
+    }
+    @media (max-width:1199px) {
+        font-size:16px;
+    }
+    font-weight: 400;
+    span {
+        font-weight: 600;
+    }
+}
+.my-meeting-toptitle.records-2 {
+    @media (min-width:1200px) {
+        margin-right: 10%;
+    }
+}
+.video {
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+}
+.number-subs.records-2 {
+    @media (min-width:1200px) {
+        margin-right: 7%;
+    }
+}
+/* Meeting Records 2 End */
 .free-trial {
     display: none;
 }
