--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4995,6 +4995,10 @@ input.calendar {
         border-radius: 36px;
     }
 }
+.last-mb {
+    font-size:14px;
+    color:#007BFF;
+}
 .act-flex {
     span {
         font-size:17px;
